--- a/src/index.css
+++ b/src/index.css
@@ -42,26 +42,27 @@ h1 {
 
 .todo-list {
   display: flex;
-  flex-flow: row wrap;
+  flex-direction: column;
+  /* flex-flow: row wrap; */
   justify-content: space-between;
   width: 100%;
   margin: 0 auto;
 }
 .item {
   background-color: #535151;
-  width: 45%;
+  width: 99%;
   text-align: left;
   margin: 4px 0;
   padding-left: 8px;
   cursor: pointer;
 }
 
-.item.purchased {
-  background-color: #dbd9d9;
+.item.completed {
+  background-color: #706a6a;
   text-decoration: line-through;
 }
 form {
-  width: 50%;
+  width: 45%;
   display: flex;
   justify-content: flex-end;
 }
@@ -71,9 +72,10 @@ form > input {
   padding: 6px 0;
   font-size: 1rem;
   width: 240px;
-  outline: 0;
+  /* outline: 0; */
   color: white;
-  border-bottom: 1px solid #535151;
+  /* border-bottom: 1px solid #535151; */
+  border: 1px solid #535151;
   margin-right: 8px;
 }
 
@@ -82,6 +84,8 @@ button {
   border: 1px solid #706c86;
   color: white;
   font-size: 16px;
+  /* border-bottom: 1px solid red; */
+  width: 200px;
   padding: 6px 14px;
 }
 
